[Angelos] Use the same OllamaClient Object instead of creating a new one in every prompt